<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.itemstock.addstock.AddStockActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            android:text="@string/text_manage_stock" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_supplier"
                android:textSize="18sp" />

            <EditText
                android:hint="@string/hint_enter_supplier"
                android:id="@+id/et_supplier"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_qty"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_qty"
                android:inputType="number"
                android:textAlignment="center"
                tools:text="25" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:text="@string/text_confirm" />

    </LinearLayout>

</ScrollView>